--- a/index.html
+++ b/index.html
@@ -167,26 +167,38 @@
             12% { transform: translateY(0); opacity: 1; } /* Menos tempo parado */
             13% { transform: translateY(0); opacity: 0.1; } /* FADEOUT no início do movimento */
             14% { transform: translateY(-40px); opacity: 0.1; } /* Movimento iniciando com fade */
-            18% { transform: translateY(-118px); opacity: 0.1; } /* Transição com fade */
-            20% { transform: translateY(-122px); opacity: 0.5; } /* Micro ajuste + começando FADEIN */
+            16% { transform: translateY(-80px); opacity: 0; } /* Meio do movimento - totalmente invisível */
+            18% { transform: translateY(-118px); opacity: 0; } /* Transição invisível */
+            19% { transform: translateY(-120px); opacity: 0.3; } /* Começando FADEIN gradual */
+            20% { transform: translateY(-122px); opacity: 0.6; } /* Continuando FADEIN */
+            21% { transform: translateY(-121px); opacity: 0.8; } /* Quase visível */
             22% { transform: translateY(-120px); opacity: 1; } /* Posição final + FADEIN completo */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
             35% { transform: translateY(-120px); opacity: 0.1; } /* FADEOUT no início do movimento */
             36% { transform: translateY(-160px); opacity: 0.1; } /* Movimento iniciando com fade */
-            40% { transform: translateY(-238px); opacity: 0.1; } /* Transição com fade */
-            42% { transform: translateY(-242px); opacity: 0.5; } /* Micro ajuste + começando FADEIN */
+            38% { transform: translateY(-200px); opacity: 0; } /* Meio do movimento - totalmente invisível */
+            40% { transform: translateY(-238px); opacity: 0; } /* Transição invisível */
+            41% { transform: translateY(-240px); opacity: 0.3; } /* Começando FADEIN gradual */
+            42% { transform: translateY(-242px); opacity: 0.6; } /* Continuando FADEIN */
+            43% { transform: translateY(-241px); opacity: 0.8; } /* Quase visível */
             44% { transform: translateY(-240px); opacity: 1; } /* Posição final + FADEIN completo */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
             57% { transform: translateY(-240px); opacity: 0.1; } /* FADEOUT no início do movimento */
             58% { transform: translateY(-280px); opacity: 0.1; } /* Movimento iniciando com fade */
-            62% { transform: translateY(-358px); opacity: 0.1; } /* Transição com fade */
-            64% { transform: translateY(-362px); opacity: 0.5; } /* Micro ajuste + começando FADEIN */
+            60% { transform: translateY(-320px); opacity: 0; } /* Meio do movimento - totalmente invisível */
+            62% { transform: translateY(-358px); opacity: 0; } /* Transição invisível */
+            63% { transform: translateY(-360px); opacity: 0.3; } /* Começando FADEIN gradual */
+            64% { transform: translateY(-362px); opacity: 0.6; } /* Continuando FADEIN */
+            65% { transform: translateY(-361px); opacity: 0.8; } /* Quase visível */
             66% { transform: translateY(-360px); opacity: 1; } /* Posição final + FADEIN completo */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
             79% { transform: translateY(-360px); opacity: 0.1; } /* FADEOUT no início do movimento */
             80% { transform: translateY(-400px); opacity: 0.1; } /* Movimento iniciando com fade */
-            84% { transform: translateY(-478px); opacity: 0.1; } /* Transição com fade */
-            86% { transform: translateY(-482px); opacity: 0.5; } /* Micro ajuste + começando FADEIN */
+            82% { transform: translateY(-440px); opacity: 0; } /* Meio do movimento - totalmente invisível */
+            84% { transform: translateY(-478px); opacity: 0; } /* Transição invisível */
+            85% { transform: translateY(-480px); opacity: 0.3; } /* Começando FADEIN gradual */
+            86% { transform: translateY(-482px); opacity: 0.6; } /* Continuando FADEIN */
+            87% { transform: translateY(-481px); opacity: 0.8; } /* Quase visível */
             88% { transform: translateY(-480px); opacity: 1; } /* Posição final + FADEIN completo */
             89% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
             100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
