🌊 FADE IN SUAVE: Aumenta duração do fade in de 4s para 4.5s para evitar efeito de 'piscada'

--- a/index.html
+++ b/index.html
@@ -169,37 +169,41 @@
             14% { transform: translateY(-40px); opacity: 0.1; } /* Movimento iniciando com fade */
             16% { transform: translateY(-80px); opacity: 0; } /* Meio do movimento - totalmente invisível */
             18% { transform: translateY(-118px); opacity: 0; } /* Transição invisível */
-            19% { transform: translateY(-120px); opacity: 0.3; } /* Começando FADEIN gradual */
-            20% { transform: translateY(-122px); opacity: 0.6; } /* Continuando FADEIN */
-            21% { transform: translateY(-121px); opacity: 0.8; } /* Quase visível */
-            22% { transform: translateY(-120px); opacity: 1; } /* Posição final + FADEIN completo */
+            18.5% { transform: translateY(-120px); opacity: 0.1; } /* Começando FADEIN bem lento */
+            19.5% { transform: translateY(-121px); opacity: 0.3; } /* FADEIN gradual mais lento */
+            20.5% { transform: translateY(-122px); opacity: 0.5; } /* Continuando FADEIN lento */
+            21.5% { transform: translateY(-121px); opacity: 0.7; } /* Quase visível */
+            22.5% { transform: translateY(-120px); opacity: 1; } /* Posição final + FADEIN completo */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
             35% { transform: translateY(-120px); opacity: 0.1; } /* FADEOUT no início do movimento */
             36% { transform: translateY(-160px); opacity: 0.1; } /* Movimento iniciando com fade */
             38% { transform: translateY(-200px); opacity: 0; } /* Meio do movimento - totalmente invisível */
             40% { transform: translateY(-238px); opacity: 0; } /* Transição invisível */
-            41% { transform: translateY(-240px); opacity: 0.3; } /* Começando FADEIN gradual */
-            42% { transform: translateY(-242px); opacity: 0.6; } /* Continuando FADEIN */
-            43% { transform: translateY(-241px); opacity: 0.8; } /* Quase visível */
-            44% { transform: translateY(-240px); opacity: 1; } /* Posição final + FADEIN completo */
+            40.5% { transform: translateY(-240px); opacity: 0.1; } /* Começando FADEIN bem lento */
+            41.5% { transform: translateY(-241px); opacity: 0.3; } /* FADEIN gradual mais lento */
+            42.5% { transform: translateY(-242px); opacity: 0.5; } /* Continuando FADEIN lento */
+            43.5% { transform: translateY(-241px); opacity: 0.7; } /* Quase visível */
+            44.5% { transform: translateY(-240px); opacity: 1; } /* Posição final + FADEIN completo */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
             57% { transform: translateY(-240px); opacity: 0.1; } /* FADEOUT no início do movimento */
             58% { transform: translateY(-280px); opacity: 0.1; } /* Movimento iniciando com fade */
             60% { transform: translateY(-320px); opacity: 0; } /* Meio do movimento - totalmente invisível */
             62% { transform: translateY(-358px); opacity: 0; } /* Transição invisível */
-            63% { transform: translateY(-360px); opacity: 0.3; } /* Começando FADEIN gradual */
-            64% { transform: translateY(-362px); opacity: 0.6; } /* Continuando FADEIN */
-            65% { transform: translateY(-361px); opacity: 0.8; } /* Quase visível */
-            66% { transform: translateY(-360px); opacity: 1; } /* Posição final + FADEIN completo */
+            62.5% { transform: translateY(-360px); opacity: 0.1; } /* Começando FADEIN bem lento */
+            63.5% { transform: translateY(-361px); opacity: 0.3; } /* FADEIN gradual mais lento */
+            64.5% { transform: translateY(-362px); opacity: 0.5; } /* Continuando FADEIN lento */
+            65.5% { transform: translateY(-361px); opacity: 0.7; } /* Quase visível */
+            66.5% { transform: translateY(-360px); opacity: 1; } /* Posição final + FADEIN completo */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
             79% { transform: translateY(-360px); opacity: 0.1; } /* FADEOUT no início do movimento */
             80% { transform: translateY(-400px); opacity: 0.1; } /* Movimento iniciando com fade */
             82% { transform: translateY(-440px); opacity: 0; } /* Meio do movimento - totalmente invisível */
             84% { transform: translateY(-478px); opacity: 0; } /* Transição invisível */
-            85% { transform: translateY(-480px); opacity: 0.3; } /* Começando FADEIN gradual */
-            86% { transform: translateY(-482px); opacity: 0.6; } /* Continuando FADEIN */
-            87% { transform: translateY(-481px); opacity: 0.8; } /* Quase visível */
-            88% { transform: translateY(-480px); opacity: 1; } /* Posição final + FADEIN completo */
+            84.5% { transform: translateY(-480px); opacity: 0.1; } /* Começando FADEIN bem lento */
+            85.5% { transform: translateY(-481px); opacity: 0.3; } /* FADEIN gradual mais lento */
+            86.5% { transform: translateY(-482px); opacity: 0.5; } /* Continuando FADEIN lento */
+            87.5% { transform: translateY(-481px); opacity: 0.7; } /* Quase visível */
+            88.5% { transform: translateY(-480px); opacity: 1; } /* Posição final + FADEIN completo */
             89% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
             100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
         }
