🌅 FADEOUT GRADUAL: Palavras que sobem agora fazem fade gradual desde o início (1→0.7→0.5→0.3→0.1→0)

--- a/index.html
+++ b/index.html
@@ -165,8 +165,10 @@
         @keyframes wordSlide {
             0% { transform: translateY(0); opacity: 1; } /* Inicia estático - negócio primeira vez */
             12% { transform: translateY(0); opacity: 1; } /* Menos tempo parado */
-            13% { transform: translateY(0); opacity: 0.1; } /* FADEOUT no início do movimento */
-            14% { transform: translateY(-40px); opacity: 0.1; } /* Movimento iniciando com fade */
+            12.5% { transform: translateY(0); opacity: 0.7; } /* FADEOUT gradual no início */
+            13% { transform: translateY(-10px); opacity: 0.5; } /* Começando movimento + fade */
+            13.5% { transform: translateY(-25px); opacity: 0.3; } /* Continuando FADEOUT */
+            14% { transform: translateY(-40px); opacity: 0.1; } /* Movimento com fade avançado */
             16% { transform: translateY(-80px); opacity: 0; } /* Meio do movimento - totalmente invisível */
             18% { transform: translateY(-118px); opacity: 0; } /* Transição invisível */
             18.5% { transform: translateY(-120px); opacity: 0.1; } /* Começando FADEIN bem lento */
@@ -175,8 +177,10 @@
             21.5% { transform: translateY(-121px); opacity: 0.7; } /* Quase visível */
             22.5% { transform: translateY(-120px); opacity: 1; } /* Posição final + FADEIN completo */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
-            35% { transform: translateY(-120px); opacity: 0.1; } /* FADEOUT no início do movimento */
-            36% { transform: translateY(-160px); opacity: 0.1; } /* Movimento iniciando com fade */
+            34.5% { transform: translateY(-120px); opacity: 0.7; } /* FADEOUT gradual no início */
+            35% { transform: translateY(-130px); opacity: 0.5; } /* Começando movimento + fade */
+            35.5% { transform: translateY(-145px); opacity: 0.3; } /* Continuando FADEOUT */
+            36% { transform: translateY(-160px); opacity: 0.1; } /* Movimento com fade avançado */
             38% { transform: translateY(-200px); opacity: 0; } /* Meio do movimento - totalmente invisível */
             40% { transform: translateY(-238px); opacity: 0; } /* Transição invisível */
             40.5% { transform: translateY(-240px); opacity: 0.1; } /* Começando FADEIN bem lento */
@@ -185,8 +189,10 @@
             43.5% { transform: translateY(-241px); opacity: 0.7; } /* Quase visível */
             44.5% { transform: translateY(-240px); opacity: 1; } /* Posição final + FADEIN completo */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
-            57% { transform: translateY(-240px); opacity: 0.1; } /* FADEOUT no início do movimento */
-            58% { transform: translateY(-280px); opacity: 0.1; } /* Movimento iniciando com fade */
+            56.5% { transform: translateY(-240px); opacity: 0.7; } /* FADEOUT gradual no início */
+            57% { transform: translateY(-250px); opacity: 0.5; } /* Começando movimento + fade */
+            57.5% { transform: translateY(-265px); opacity: 0.3; } /* Continuando FADEOUT */
+            58% { transform: translateY(-280px); opacity: 0.1; } /* Movimento com fade avançado */
             60% { transform: translateY(-320px); opacity: 0; } /* Meio do movimento - totalmente invisível */
             62% { transform: translateY(-358px); opacity: 0; } /* Transição invisível */
             62.5% { transform: translateY(-360px); opacity: 0.1; } /* Começando FADEIN bem lento */
@@ -195,8 +201,10 @@
             65.5% { transform: translateY(-361px); opacity: 0.7; } /* Quase visível */
             66.5% { transform: translateY(-360px); opacity: 1; } /* Posição final + FADEIN completo */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
-            79% { transform: translateY(-360px); opacity: 0.1; } /* FADEOUT no início do movimento */
-            80% { transform: translateY(-400px); opacity: 0.1; } /* Movimento iniciando com fade */
+            78.5% { transform: translateY(-360px); opacity: 0.7; } /* FADEOUT gradual no início */
+            79% { transform: translateY(-370px); opacity: 0.5; } /* Começando movimento + fade */
+            79.5% { transform: translateY(-385px); opacity: 0.3; } /* Continuando FADEOUT */
+            80% { transform: translateY(-400px); opacity: 0.1; } /* Movimento com fade avançado */
             82% { transform: translateY(-440px); opacity: 0; } /* Meio do movimento - totalmente invisível */
             84% { transform: translateY(-478px); opacity: 0; } /* Transição invisível */
             84.5% { transform: translateY(-480px); opacity: 0.1; } /* Começando FADEIN bem lento */
