--- a/index.html
+++ b/index.html
@@ -165,48 +165,48 @@
         @keyframes wordSlide {
             0% { transform: translateY(0); opacity: 1; } /* Inicia estático - negócio primeira vez */
             12% { transform: translateY(0); opacity: 1; } /* Menos tempo parado */
-            12.5% { transform: translateY(0); opacity: 0.7; } /* FADEOUT gradual no início */
-            13% { transform: translateY(-10px); opacity: 0.5; } /* Começando movimento + fade */
-            13.5% { transform: translateY(-25px); opacity: 0.3; } /* Continuando FADEOUT */
-            14% { transform: translateY(-40px); opacity: 0.1; } /* Movimento com fade avançado */
-            16% { transform: translateY(-80px); opacity: 0; } /* Meio do movimento - totalmente invisível */
-            18% { transform: translateY(-118px); opacity: 0; } /* Transição invisível */
+            13% { transform: translateY(-10px); opacity: 1; } /* Começando movimento ainda visível */
+            14% { transform: translateY(-40px); opacity: 1; } /* Movimento mantendo visibilidade */
+            15% { transform: translateY(-60px); opacity: 0.8; } /* Leve fade no meio */
+            16% { transform: translateY(-80px); opacity: 0.5; } /* Fade mais acentuado */
+            17% { transform: translateY(-100px); opacity: 0.2; } /* Quase invisível */
+            18% { transform: translateY(-118px); opacity: 0; } /* INVISÍVEL só no final */
             18.5% { transform: translateY(-120px); opacity: 0.1; } /* Começando FADEIN bem lento */
             19.5% { transform: translateY(-121px); opacity: 0.3; } /* FADEIN gradual mais lento */
             20.5% { transform: translateY(-122px); opacity: 0.5; } /* Continuando FADEIN lento */
             21.5% { transform: translateY(-121px); opacity: 0.7; } /* Quase visível */
             22.5% { transform: translateY(-120px); opacity: 1; } /* Posição final + FADEIN completo */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
-            34.5% { transform: translateY(-120px); opacity: 0.7; } /* FADEOUT gradual no início */
-            35% { transform: translateY(-130px); opacity: 0.5; } /* Começando movimento + fade */
-            35.5% { transform: translateY(-145px); opacity: 0.3; } /* Continuando FADEOUT */
-            36% { transform: translateY(-160px); opacity: 0.1; } /* Movimento com fade avançado */
-            38% { transform: translateY(-200px); opacity: 0; } /* Meio do movimento - totalmente invisível */
-            40% { transform: translateY(-238px); opacity: 0; } /* Transição invisível */
+            35% { transform: translateY(-130px); opacity: 1; } /* Começando movimento ainda visível */
+            36% { transform: translateY(-160px); opacity: 1; } /* Movimento mantendo visibilidade */
+            37% { transform: translateY(-180px); opacity: 0.8; } /* Leve fade no meio */
+            38% { transform: translateY(-200px); opacity: 0.5; } /* Fade mais acentuado */
+            39% { transform: translateY(-220px); opacity: 0.2; } /* Quase invisível */
+            40% { transform: translateY(-238px); opacity: 0; } /* INVISÍVEL só no final */
             40.5% { transform: translateY(-240px); opacity: 0.1; } /* Começando FADEIN bem lento */
             41.5% { transform: translateY(-241px); opacity: 0.3; } /* FADEIN gradual mais lento */
             42.5% { transform: translateY(-242px); opacity: 0.5; } /* Continuando FADEIN lento */
             43.5% { transform: translateY(-241px); opacity: 0.7; } /* Quase visível */
             44.5% { transform: translateY(-240px); opacity: 1; } /* Posição final + FADEIN completo */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
-            56.5% { transform: translateY(-240px); opacity: 0.7; } /* FADEOUT gradual no início */
-            57% { transform: translateY(-250px); opacity: 0.5; } /* Começando movimento + fade */
-            57.5% { transform: translateY(-265px); opacity: 0.3; } /* Continuando FADEOUT */
-            58% { transform: translateY(-280px); opacity: 0.1; } /* Movimento com fade avançado */
-            60% { transform: translateY(-320px); opacity: 0; } /* Meio do movimento - totalmente invisível */
-            62% { transform: translateY(-358px); opacity: 0; } /* Transição invisível */
+            57% { transform: translateY(-250px); opacity: 1; } /* Começando movimento ainda visível */
+            58% { transform: translateY(-280px); opacity: 1; } /* Movimento mantendo visibilidade */
+            59% { transform: translateY(-300px); opacity: 0.8; } /* Leve fade no meio */
+            60% { transform: translateY(-320px); opacity: 0.5; } /* Fade mais acentuado */
+            61% { transform: translateY(-340px); opacity: 0.2; } /* Quase invisível */
+            62% { transform: translateY(-358px); opacity: 0; } /* INVISÍVEL só no final */
             62.5% { transform: translateY(-360px); opacity: 0.1; } /* Começando FADEIN bem lento */
             63.5% { transform: translateY(-361px); opacity: 0.3; } /* FADEIN gradual mais lento */
             64.5% { transform: translateY(-362px); opacity: 0.5; } /* Continuando FADEIN lento */
             65.5% { transform: translateY(-361px); opacity: 0.7; } /* Quase visível */
             66.5% { transform: translateY(-360px); opacity: 1; } /* Posição final + FADEIN completo */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
-            78.5% { transform: translateY(-360px); opacity: 0.7; } /* FADEOUT gradual no início */
-            79% { transform: translateY(-370px); opacity: 0.5; } /* Começando movimento + fade */
-            79.5% { transform: translateY(-385px); opacity: 0.3; } /* Continuando FADEOUT */
-            80% { transform: translateY(-400px); opacity: 0.1; } /* Movimento com fade avançado */
-            82% { transform: translateY(-440px); opacity: 0; } /* Meio do movimento - totalmente invisível */
-            84% { transform: translateY(-478px); opacity: 0; } /* Transição invisível */
+            79% { transform: translateY(-370px); opacity: 1; } /* Começando movimento ainda visível */
+            80% { transform: translateY(-400px); opacity: 1; } /* Movimento mantendo visibilidade */
+            81% { transform: translateY(-420px); opacity: 0.8; } /* Leve fade no meio */
+            82% { transform: translateY(-440px); opacity: 0.5; } /* Fade mais acentuado */
+            83% { transform: translateY(-460px); opacity: 0.2; } /* Quase invisível */
+            84% { transform: translateY(-478px); opacity: 0; } /* INVISÍVEL só no final */
             84.5% { transform: translateY(-480px); opacity: 0.1; } /* Começando FADEIN bem lento */
             85.5% { transform: translateY(-481px); opacity: 0.3; } /* FADEIN gradual mais lento */
             86.5% { transform: translateY(-482px); opacity: 0.5; } /* Continuando FADEIN lento */
