--- a/index.html
+++ b/index.html
@@ -171,11 +171,12 @@
             16% { transform: translateY(-80px); opacity: 0.5; } /* Fade mais acentuado */
             17% { transform: translateY(-100px); opacity: 0.2; } /* Quase invisível */
             18% { transform: translateY(-118px); opacity: 0; } /* INVISÍVEL só no final */
-            18.5% { transform: translateY(-120px); opacity: 0.1; } /* Começando FADEIN bem lento */
-            19.5% { transform: translateY(-121px); opacity: 0.3; } /* FADEIN gradual mais lento */
-            20.5% { transform: translateY(-122px); opacity: 0.5; } /* Continuando FADEIN lento */
-            21.5% { transform: translateY(-121px); opacity: 0.7; } /* Quase visível */
-            22.5% { transform: translateY(-120px); opacity: 1; } /* Posição final + FADEIN completo */
+            18.5% { transform: translateY(-120px); opacity: 0; } /* Ainda invisível no início da chegada */
+            19% { transform: translateY(-121px); opacity: 0.2; } /* FADEIN rápido no início */
+            19.5% { transform: translateY(-122px); opacity: 0.5; } /* FADEIN concentrado */
+            20% { transform: translateY(-121px); opacity: 0.8; } /* Quase visível */
+            20.5% { transform: translateY(-120px); opacity: 1; } /* Totalmente visível */
+            22.5% { transform: translateY(-120px); opacity: 1; } /* Posição final mantida */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
             35% { transform: translateY(-130px); opacity: 1; } /* Começando movimento ainda visível */
             36% { transform: translateY(-160px); opacity: 1; } /* Movimento mantendo visibilidade */
@@ -183,11 +184,12 @@
             38% { transform: translateY(-200px); opacity: 0.5; } /* Fade mais acentuado */
             39% { transform: translateY(-220px); opacity: 0.2; } /* Quase invisível */
             40% { transform: translateY(-238px); opacity: 0; } /* INVISÍVEL só no final */
-            40.5% { transform: translateY(-240px); opacity: 0.1; } /* Começando FADEIN bem lento */
-            41.5% { transform: translateY(-241px); opacity: 0.3; } /* FADEIN gradual mais lento */
-            42.5% { transform: translateY(-242px); opacity: 0.5; } /* Continuando FADEIN lento */
-            43.5% { transform: translateY(-241px); opacity: 0.7; } /* Quase visível */
-            44.5% { transform: translateY(-240px); opacity: 1; } /* Posição final + FADEIN completo */
+            40.5% { transform: translateY(-240px); opacity: 0; } /* Ainda invisível no início da chegada */
+            41% { transform: translateY(-241px); opacity: 0.2; } /* FADEIN rápido no início */
+            41.5% { transform: translateY(-242px); opacity: 0.5; } /* FADEIN concentrado */
+            42% { transform: translateY(-241px); opacity: 0.8; } /* Quase visível */
+            42.5% { transform: translateY(-240px); opacity: 1; } /* Totalmente visível */
+            44.5% { transform: translateY(-240px); opacity: 1; } /* Posição final mantida */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
             57% { transform: translateY(-250px); opacity: 1; } /* Começando movimento ainda visível */
             58% { transform: translateY(-280px); opacity: 1; } /* Movimento mantendo visibilidade */
@@ -195,11 +197,12 @@
             60% { transform: translateY(-320px); opacity: 0.5; } /* Fade mais acentuado */
             61% { transform: translateY(-340px); opacity: 0.2; } /* Quase invisível */
             62% { transform: translateY(-358px); opacity: 0; } /* INVISÍVEL só no final */
-            62.5% { transform: translateY(-360px); opacity: 0.1; } /* Começando FADEIN bem lento */
-            63.5% { transform: translateY(-361px); opacity: 0.3; } /* FADEIN gradual mais lento */
-            64.5% { transform: translateY(-362px); opacity: 0.5; } /* Continuando FADEIN lento */
-            65.5% { transform: translateY(-361px); opacity: 0.7; } /* Quase visível */
-            66.5% { transform: translateY(-360px); opacity: 1; } /* Posição final + FADEIN completo */
+            62.5% { transform: translateY(-360px); opacity: 0; } /* Ainda invisível no início da chegada */
+            63% { transform: translateY(-361px); opacity: 0.2; } /* FADEIN rápido no início */
+            63.5% { transform: translateY(-362px); opacity: 0.5; } /* FADEIN concentrado */
+            64% { transform: translateY(-361px); opacity: 0.8; } /* Quase visível */
+            64.5% { transform: translateY(-360px); opacity: 1; } /* Totalmente visível */
+            66.5% { transform: translateY(-360px); opacity: 1; } /* Posição final mantida */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
             79% { transform: translateY(-370px); opacity: 1; } /* Começando movimento ainda visível */
             80% { transform: translateY(-400px); opacity: 1; } /* Movimento mantendo visibilidade */
@@ -207,11 +210,12 @@
             82% { transform: translateY(-440px); opacity: 0.5; } /* Fade mais acentuado */
             83% { transform: translateY(-460px); opacity: 0.2; } /* Quase invisível */
             84% { transform: translateY(-478px); opacity: 0; } /* INVISÍVEL só no final */
-            84.5% { transform: translateY(-480px); opacity: 0.1; } /* Começando FADEIN bem lento */
-            85.5% { transform: translateY(-481px); opacity: 0.3; } /* FADEIN gradual mais lento */
-            86.5% { transform: translateY(-482px); opacity: 0.5; } /* Continuando FADEIN lento */
-            87.5% { transform: translateY(-481px); opacity: 0.7; } /* Quase visível */
-            88.5% { transform: translateY(-480px); opacity: 1; } /* Posição final + FADEIN completo */
+            84.5% { transform: translateY(-480px); opacity: 0; } /* Ainda invisível no início da chegada */
+            85% { transform: translateY(-481px); opacity: 0.2; } /* FADEIN rápido no início */
+            85.5% { transform: translateY(-482px); opacity: 0.5; } /* FADEIN concentrado */
+            86% { transform: translateY(-481px); opacity: 0.8; } /* Quase visível */
+            86.5% { transform: translateY(-480px); opacity: 1; } /* Totalmente visível */
+            88.5% { transform: translateY(-480px); opacity: 1; } /* Posição final mantida */
             89% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
             100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
         }
