🔄 FADE INVERTIDO: Palavras que surgem fazem fade com ordem diferente (0.8→0.5→0.2→0.5→1)

--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
             16% { transform: translateY(-80px); opacity: 0.5; } /* Fade mais acentuado */
             17% { transform: translateY(-100px); opacity: 0.2; } /* Quase invisível */
             18% { transform: translateY(-118px); opacity: 0; } /* INVISÍVEL só no final */
-            18.5% { transform: translateY(-120px); opacity: 0; } /* Ainda invisível no início da chegada */
-            19% { transform: translateY(-121px); opacity: 0.2; } /* FADEIN rápido no início */
-            19.5% { transform: translateY(-122px); opacity: 0.5; } /* FADEIN concentrado */
-            20% { transform: translateY(-121px); opacity: 0.8; } /* Quase visível */
+            18.5% { transform: translateY(-120px); opacity: 0.8; } /* Começa quase visível */
+            19% { transform: translateY(-121px); opacity: 0.5; } /* Diminui para meio visível */
+            19.5% { transform: translateY(-122px); opacity: 0.2; } /* Fica bem pouco visível */
+            20% { transform: translateY(-121px); opacity: 0.5; } /* Volta a aumentar */
             20.5% { transform: translateY(-120px); opacity: 1; } /* Totalmente visível */
             22.5% { transform: translateY(-120px); opacity: 1; } /* Posição final mantida */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
@@ -184,10 +184,10 @@
             38% { transform: translateY(-200px); opacity: 0.5; } /* Fade mais acentuado */
             39% { transform: translateY(-220px); opacity: 0.2; } /* Quase invisível */
             40% { transform: translateY(-238px); opacity: 0; } /* INVISÍVEL só no final */
-            40.5% { transform: translateY(-240px); opacity: 0; } /* Ainda invisível no início da chegada */
-            41% { transform: translateY(-241px); opacity: 0.2; } /* FADEIN rápido no início */
-            41.5% { transform: translateY(-242px); opacity: 0.5; } /* FADEIN concentrado */
-            42% { transform: translateY(-241px); opacity: 0.8; } /* Quase visível */
+            40.5% { transform: translateY(-240px); opacity: 0.8; } /* Começa quase visível */
+            41% { transform: translateY(-241px); opacity: 0.5; } /* Diminui para meio visível */
+            41.5% { transform: translateY(-242px); opacity: 0.2; } /* Fica bem pouco visível */
+            42% { transform: translateY(-241px); opacity: 0.5; } /* Volta a aumentar */
             42.5% { transform: translateY(-240px); opacity: 1; } /* Totalmente visível */
             44.5% { transform: translateY(-240px); opacity: 1; } /* Posição final mantida */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
@@ -197,10 +197,10 @@
             60% { transform: translateY(-320px); opacity: 0.5; } /* Fade mais acentuado */
             61% { transform: translateY(-340px); opacity: 0.2; } /* Quase invisível */
             62% { transform: translateY(-358px); opacity: 0; } /* INVISÍVEL só no final */
-            62.5% { transform: translateY(-360px); opacity: 0; } /* Ainda invisível no início da chegada */
-            63% { transform: translateY(-361px); opacity: 0.2; } /* FADEIN rápido no início */
-            63.5% { transform: translateY(-362px); opacity: 0.5; } /* FADEIN concentrado */
-            64% { transform: translateY(-361px); opacity: 0.8; } /* Quase visível */
+            62.5% { transform: translateY(-360px); opacity: 0.8; } /* Começa quase visível */
+            63% { transform: translateY(-361px); opacity: 0.5; } /* Diminui para meio visível */
+            63.5% { transform: translateY(-362px); opacity: 0.2; } /* Fica bem pouco visível */
+            64% { transform: translateY(-361px); opacity: 0.5; } /* Volta a aumentar */
             64.5% { transform: translateY(-360px); opacity: 1; } /* Totalmente visível */
             66.5% { transform: translateY(-360px); opacity: 1; } /* Posição final mantida */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
@@ -210,10 +210,10 @@
             82% { transform: translateY(-440px); opacity: 0.5; } /* Fade mais acentuado */
             83% { transform: translateY(-460px); opacity: 0.2; } /* Quase invisível */
             84% { transform: translateY(-478px); opacity: 0; } /* INVISÍVEL só no final */
-            84.5% { transform: translateY(-480px); opacity: 0; } /* Ainda invisível no início da chegada */
-            85% { transform: translateY(-481px); opacity: 0.2; } /* FADEIN rápido no início */
-            85.5% { transform: translateY(-482px); opacity: 0.5; } /* FADEIN concentrado */
-            86% { transform: translateY(-481px); opacity: 0.8; } /* Quase visível */
+            84.5% { transform: translateY(-480px); opacity: 0.8; } /* Começa quase visível */
+            85% { transform: translateY(-481px); opacity: 0.5; } /* Diminui para meio visível */
+            85.5% { transform: translateY(-482px); opacity: 0.2; } /* Fica bem pouco visível */
+            86% { transform: translateY(-481px); opacity: 0.5; } /* Volta a aumentar */
             86.5% { transform: translateY(-480px); opacity: 1; } /* Totalmente visível */
             88.5% { transform: translateY(-480px); opacity: 1; } /* Posição final mantida */
             89% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
