--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
             17% { transform: translateY(-100px); opacity: 0.2; } /* Quase invisível */
             18% { transform: translateY(-118px); opacity: 0; } /* INVISÍVEL só no final */
             18.5% { transform: translateY(-120px); opacity: 0; } /* Ainda invisível */
-            19% { transform: translateY(-121px); opacity: 0.3; } /* Começa a aparecer */
-            19.5% { transform: translateY(-122px); opacity: 0.7; } /* Mais visível */
-            20% { transform: translateY(-121px); opacity: 1; } /* Totalmente visível */
+            19% { transform: translateY(-121px); opacity: 0.5; } /* Aparece rapidamente */
+            19.2% { transform: translateY(-122px); opacity: 1; } /* Totalmente visível */
+            20% { transform: translateY(-121px); opacity: 1; } /* Mantém visível */
             20.5% { transform: translateY(-120px); opacity: 1; } /* Mantém visível */
             22.5% { transform: translateY(-120px); opacity: 1; } /* Posição final mantida */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
@@ -185,9 +185,9 @@
             39% { transform: translateY(-220px); opacity: 0.2; } /* Quase invisível */
             40% { transform: translateY(-238px); opacity: 0; } /* INVISÍVEL só no final */
             40.5% { transform: translateY(-240px); opacity: 0; } /* Ainda invisível */
-            41% { transform: translateY(-241px); opacity: 0.3; } /* Começa a aparecer */
-            41.5% { transform: translateY(-242px); opacity: 0.7; } /* Mais visível */
-            42% { transform: translateY(-241px); opacity: 1; } /* Totalmente visível */
+            41% { transform: translateY(-241px); opacity: 0.5; } /* Aparece rapidamente */
+            41.2% { transform: translateY(-242px); opacity: 1; } /* Totalmente visível */
+            42% { transform: translateY(-241px); opacity: 1; } /* Mantém visível */
             42.5% { transform: translateY(-240px); opacity: 1; } /* Mantém visível */
             44.5% { transform: translateY(-240px); opacity: 1; } /* Posição final mantida */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
@@ -198,9 +198,9 @@
             61% { transform: translateY(-340px); opacity: 0.2; } /* Quase invisível */
             62% { transform: translateY(-358px); opacity: 0; } /* INVISÍVEL só no final */
             62.5% { transform: translateY(-360px); opacity: 0; } /* Ainda invisível */
-            63% { transform: translateY(-361px); opacity: 0.3; } /* Começa a aparecer */
-            63.5% { transform: translateY(-362px); opacity: 0.7; } /* Mais visível */
-            64% { transform: translateY(-361px); opacity: 1; } /* Totalmente visível */
+            63% { transform: translateY(-361px); opacity: 0.5; } /* Aparece rapidamente */
+            63.2% { transform: translateY(-362px); opacity: 1; } /* Totalmente visível */
+            64% { transform: translateY(-361px); opacity: 1; } /* Mantém visível */
             64.5% { transform: translateY(-360px); opacity: 1; } /* Mantém visível */
             66.5% { transform: translateY(-360px); opacity: 1; } /* Posição final mantida */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
@@ -211,9 +211,9 @@
             83% { transform: translateY(-460px); opacity: 0.2; } /* Quase invisível */
             84% { transform: translateY(-478px); opacity: 0; } /* INVISÍVEL só no final */
             84.5% { transform: translateY(-480px); opacity: 0; } /* Ainda invisível */
-            85% { transform: translateY(-481px); opacity: 0.3; } /* Começa a aparecer */
-            85.5% { transform: translateY(-482px); opacity: 0.7; } /* Mais visível */
-            86% { transform: translateY(-481px); opacity: 1; } /* Totalmente visível */
+            85% { transform: translateY(-481px); opacity: 0.5; } /* Aparece rapidamente */
+            85.2% { transform: translateY(-482px); opacity: 1; } /* Totalmente visível */
+            86% { transform: translateY(-481px); opacity: 1; } /* Mantém visível */
             86.5% { transform: translateY(-480px); opacity: 1; } /* Mantém visível */
             88.5% { transform: translateY(-480px); opacity: 1; } /* Posição final mantida */
             89% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
