🌅 FADE-IN SUBINDO: Palavras começam transparentes abaixo e aparecem gradualmente enquanto sobem

--- a/index.html
+++ b/index.html
@@ -171,12 +171,11 @@
             16% { transform: translateY(-80px); opacity: 0.5; } /* Fade mais acentuado */
             17% { transform: translateY(-100px); opacity: 0.2; } /* Quase invisível */
             18% { transform: translateY(-118px); opacity: 0; } /* INVISÍVEL só no final */
-            18.5% { transform: translateY(-120px); opacity: 0; } /* Ainda invisível */
-            18.7% { transform: translateY(-120px); opacity: 1; } /* Aparece instantâneo no início */
-            19% { transform: translateY(-121px); opacity: 1; } /* Movimento normal visível */
-            19.2% { transform: translateY(-122px); opacity: 1; } /* Movimento normal visível */
-            20% { transform: translateY(-121px); opacity: 1; } /* Movimento normal visível */
-            20.5% { transform: translateY(-120px); opacity: 1; } /* Posição final visível */
+            18.5% { transform: translateY(-80px); opacity: 0; } /* Começa transparente mais baixo */
+            19% { transform: translateY(-100px); opacity: 0.3; } /* Subindo e aparecendo */
+            19.5% { transform: translateY(-115px); opacity: 0.6; } /* Continuando a subir e aparecer */
+            20% { transform: translateY(-121px); opacity: 0.8; } /* Quase na posição, quase visível */
+            20.5% { transform: translateY(-120px); opacity: 1; } /* Posição final + totalmente visível */
             22.5% { transform: translateY(-120px); opacity: 1; } /* Posição final mantida */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
             35% { transform: translateY(-130px); opacity: 1; } /* Começando movimento ainda visível */
@@ -185,12 +184,11 @@
             38% { transform: translateY(-200px); opacity: 0.5; } /* Fade mais acentuado */
             39% { transform: translateY(-220px); opacity: 0.2; } /* Quase invisível */
             40% { transform: translateY(-238px); opacity: 0; } /* INVISÍVEL só no final */
-            40.5% { transform: translateY(-240px); opacity: 0; } /* Ainda invisível */
-            40.7% { transform: translateY(-240px); opacity: 1; } /* Aparece instantâneo no início */
-            41% { transform: translateY(-241px); opacity: 1; } /* Movimento normal visível */
-            41.2% { transform: translateY(-242px); opacity: 1; } /* Movimento normal visível */
-            42% { transform: translateY(-241px); opacity: 1; } /* Movimento normal visível */
-            42.5% { transform: translateY(-240px); opacity: 1; } /* Posição final visível */
+            40.5% { transform: translateY(-200px); opacity: 0; } /* Começa transparente mais baixo */
+            41% { transform: translateY(-220px); opacity: 0.3; } /* Subindo e aparecendo */
+            41.5% { transform: translateY(-235px); opacity: 0.6; } /* Continuando a subir e aparecer */
+            42% { transform: translateY(-241px); opacity: 0.8; } /* Quase na posição, quase visível */
+            42.5% { transform: translateY(-240px); opacity: 1; } /* Posição final + totalmente visível */
             44.5% { transform: translateY(-240px); opacity: 1; } /* Posição final mantida */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
             57% { transform: translateY(-250px); opacity: 1; } /* Começando movimento ainda visível */
@@ -199,12 +197,11 @@
             60% { transform: translateY(-320px); opacity: 0.5; } /* Fade mais acentuado */
             61% { transform: translateY(-340px); opacity: 0.2; } /* Quase invisível */
             62% { transform: translateY(-358px); opacity: 0; } /* INVISÍVEL só no final */
-            62.5% { transform: translateY(-360px); opacity: 0; } /* Ainda invisível */
-            62.7% { transform: translateY(-360px); opacity: 1; } /* Aparece instantâneo no início */
-            63% { transform: translateY(-361px); opacity: 1; } /* Movimento normal visível */
-            63.2% { transform: translateY(-362px); opacity: 1; } /* Movimento normal visível */
-            64% { transform: translateY(-361px); opacity: 1; } /* Movimento normal visível */
-            64.5% { transform: translateY(-360px); opacity: 1; } /* Posição final visível */
+            62.5% { transform: translateY(-320px); opacity: 0; } /* Começa transparente mais baixo */
+            63% { transform: translateY(-340px); opacity: 0.3; } /* Subindo e aparecendo */
+            63.5% { transform: translateY(-355px); opacity: 0.6; } /* Continuando a subir e aparecer */
+            64% { transform: translateY(-361px); opacity: 0.8; } /* Quase na posição, quase visível */
+            64.5% { transform: translateY(-360px); opacity: 1; } /* Posição final + totalmente visível */
             66.5% { transform: translateY(-360px); opacity: 1; } /* Posição final mantida */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
             79% { transform: translateY(-370px); opacity: 1; } /* Começando movimento ainda visível */
@@ -213,12 +210,11 @@
             82% { transform: translateY(-440px); opacity: 0.5; } /* Fade mais acentuado */
             83% { transform: translateY(-460px); opacity: 0.2; } /* Quase invisível */
             84% { transform: translateY(-478px); opacity: 0; } /* INVISÍVEL só no final */
-            84.5% { transform: translateY(-480px); opacity: 0; } /* Ainda invisível */
-            84.7% { transform: translateY(-480px); opacity: 1; } /* Aparece instantâneo no início */
-            85% { transform: translateY(-481px); opacity: 1; } /* Movimento normal visível */
-            85.2% { transform: translateY(-482px); opacity: 1; } /* Movimento normal visível */
-            86% { transform: translateY(-481px); opacity: 1; } /* Movimento normal visível */
-            86.5% { transform: translateY(-480px); opacity: 1; } /* Posição final visível */
+            84.5% { transform: translateY(-440px); opacity: 0; } /* Começa transparente mais baixo */
+            85% { transform: translateY(-460px); opacity: 0.3; } /* Subindo e aparecendo */
+            85.5% { transform: translateY(-475px); opacity: 0.6; } /* Continuando a subir e aparecer */
+            86% { transform: translateY(-481px); opacity: 0.8; } /* Quase na posição, quase visível */
+            86.5% { transform: translateY(-480px); opacity: 1; } /* Posição final + totalmente visível */
             88.5% { transform: translateY(-480px); opacity: 1; } /* Posição final mantida */
             89% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
             100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
